description only changes on one card at a time

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<header id="header" class="navBarContainer navbar navbar-default container-fluid">
 			<div class="form-group">
-				<input type="text" id="inputText" class="" placeholder="Edit">
+				<input type="text" id="inputText" class="inputBar" placeholder="Edit">
 			</div>
-			<button type="button" class="btn btn-default">Submit</button>
+			<button type="button" id="submitButton" class="btn btn-default buttonStyle">Submit</button>
 	</header>
 	<div id="insertToDom" class="container-fluid cardWrapper">
 
