text box clears when something else besides the description is clicked

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="form-group">
 				<input type="text" id="inputText" class="inputBar" placeholder="Edit">
 			</div>
-			<button type="button" id="submitButton" class="btn btn-default buttonStyle">Submit</button>
+			<button type="button" id="submitButton" class="btn btn-default buttonStyle">True or False</button>
 	</header>
 	<div id="insertToDom" class="container-fluid cardWrapper">
 
